[package]
name = "feynman-diagrams-from-lagrangian"
version = "0.1.0"
authors = ["PinkRabbit"]
edition = "2021"
description = "Produce Feynman diagrams from Lagrangian"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
itertools = "0.12.0"
rand = "0.8.5"
